Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -16,10 +16,10 @@ Get your documentation site up and running in minutes.
 Design a docs site that looks great and empowers your users.
 
 <Columns cols={2}>
-  <Card title="Edit locally" icon="pen-to-square" color="#e9bebe" href="/development">
+  <Card title="Edit locally" icon="pen-to-square" href="/development">
     Edit your docs locally and preview them in real time.
   </Card>
-  <Card title="Customize your site" icon="palette" color="#7faff1" href="/essentials/settings">
+  <Card title="Customize your site" icon="palette" href="/essentials/settings">
     Customize the design and colors of your site to match your brand.
   </Card>
   <Card title="Set up navigation" icon="map" href="/essentials/navigation">
